<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notice"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/title_notice" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_workshop" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_fullscreen_black_24dp"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/title_feedback" />

</menu>
